--- a/index.html
+++ b/index.html
@@ -95,30 +95,14 @@
           </div>
           <div class="form-row form-row-weight">
             <div class="form-col weight-group">
-              <label for="weight-value">Weight</label>
-              <div class="weight-inputs">
-                <input
-                  type="number"
-                  id="weight-value"
-                  name="weight-value"
-                  min="0"
-                  step="any"
-                  placeholder="Enter value"
-                />
-                <label class="weight-radio"
-                  ><input type="radio" name="weight-metric" value="g" />
-                  g</label
-                >
-                <label class="weight-radio"
-                  ><input type="radio" name="weight-metric" value="kg" />
-                  kg</label
-                >
-                <label class="weight-radio"
-                  ><input type="radio" name="weight-metric" value="M" />
-                  M</label
-                >
-              </div>
+            <label for="weight-value">Weight</label>
+            <div class="weight-inputs">
+              <input type="number" id="weight-value" name="weight-value" min="0" step="any" placeholder="Enter value" >
+              <label class="weight-radio"><input type="radio" name="weight-metric" value="g" > g</label>
+              <label class="weight-radio"><input type="radio" name="weight-metric" value="kg"> kg</label>
+              <label class="weight-radio"><input type="radio" name="weight-metric" value="M"> M</label>
             </div>
+          </div>
             <div class="form-col amount-group">
               <label for="amount">Amount</label>
               <input type="number" id="amount" required />
@@ -188,7 +172,7 @@
     </div>
 
     <footer class="app-footer">
-      &copy; <span id="copyright-year"></span> Fida K S
+      &copy; <span id="copyright-year"></span> Prajwal P Mutalik
     </footer>
 
     <script>
